[workspace]
members = [
    "crates/ie-net",
    "crates/ie-html",
    "crates/ie-css",
    "crates/ie-dom",
    "crates/ie-js",
    "crates/ie-layout",
    "crates/ie-render",
    "crates/ie-shell",
    "crates/ie-sandbox",
    "crates/ie-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["bombfork"]
license = "GPL-3.0-or-later"
repository = "https://github.com/bombfork/internet-exploder"

[workspace.dependencies]
# Internal crates
ie-net = { path = "crates/ie-net" }
ie-html = { path = "crates/ie-html" }
ie-css = { path = "crates/ie-css" }
ie-dom = { path = "crates/ie-dom" }
ie-js = { path = "crates/ie-js" }
ie-layout = { path = "crates/ie-layout" }
ie-render = { path = "crates/ie-render" }
ie-shell = { path = "crates/ie-shell" }
ie-sandbox = { path = "crates/ie-sandbox" }
ie-wasm = { path = "crates/ie-wasm" }

# External dependencies
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
wgpu = "24"
winit = "0.30"
boa_engine = "0.20"
wasmtime = "31"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots"] }
rustls = "0.23"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
softbuffer = "0.4"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
base64 = "0.22"
libc = "0.2"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"

[workspace.dependencies.landlock]
version = "0.4"

[workspace.dependencies.seccompiler]
version = "0.5"
