[package]
name = "ie-html"
version = "0.1.0"
description = "WHATWG-compliant HTML parser for Internet Exploder"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
phf.workspace = true
ie-dom.workspace = true

[build-dependencies]
phf_codegen.workspace = true
serde.workspace = true
serde_json.workspace = true
