[package]
name = "ie-render"
version = "0.1.0"
description = "Rendering engine for Internet Exploder — display list and software rasterizer"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
ie-layout.workspace = true
ie-css.workspace = true

[dev-dependencies]
ie-html.workspace = true
