[package]
name = "ie-render"
version = "0.1.0"
description = "Rendering engine for Internet Exploder — GPU-accelerated via wgpu"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
ie-layout.workspace = true
ie-css.workspace = true

[dev-dependencies]
ie-html.workspace = true
