[package]
name = "ie-sandbox"
version = "0.1.0"
description = "Multi-process sandboxing for Internet Exploder"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true
seccompiler.workspace = true
