[package]
name = "ie-shell"
version = "0.1.0"
description = "Browser shell — window management, tabs, address bar, bookmarks UI"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
winit.workspace = true
url.workspace = true
clap.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ie-net.workspace = true
ie-dom.workspace = true
ie-html.workspace = true
ie-css.workspace = true
ie-layout.workspace = true
ie-render.workspace = true
ie-sandbox.workspace = true

[dev-dependencies]
tempfile.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde_json.workspace = true
libc.workspace = true
